--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "week2/nfts-and-staking/lib/forge-std"]
 	path = week2/nfts-and-staking/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "week2/nfts-and-staking/lib/openzeppelin-contracts"]
+	path = week2/nfts-and-staking/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
