--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "week2/nfts-and-staking/lib/openzeppelin-contracts"]
 	path = week2/nfts-and-staking/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "uniswap-clone/lib/forge-std"]
+	path = uniswap-clone/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
