--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "uniswap-clone/lib/forge-std"]
 	path = uniswap-clone/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "uniswap-clone/lib/solady"]
+	path = uniswap-clone/lib/solady
+	url = https://github.com/vectorized/solady
