--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "uniswap-clone/lib/openzeppelin-contracts"]
 	path = uniswap-clone/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "week2-copy/lib/forge-std"]
+	path = week2-copy/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
