--- a/.gitmodules
+++ b/.gitmodules
@@ -14,8 +14,8 @@
 	path = uniswap-clone/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
 [submodule "week2-copy/lib/forge-std"]
-	path = week2-copy/lib/forge-std
+	path = week2/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule "week2-copy/lib/openzeppelin-contracts"]
-	path = week2-copy/lib/openzeppelin-contracts
+	path = week2/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
