--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "security1/ethernaut-solutions/lib/openzeppelin-contracts"]
 	path = ethernaut-solutions/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "yul-erc1155/lib/forge-std"]
+	path = yul-erc1155/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
