--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "yul-erc1155/lib/forge-std"]
 	path = yul-erc1155/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "yul-erc1155/lib/solmate"]
+	path = yul-erc1155/lib/solmate
+	url = https://github.com/transmissions11/solmate
