--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "gas-optimization/trader-joe-optimization/lib/forge-std"]
 	path = gas-optimization/trader-joe-optimization/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "gas-optimization/trader-joe-optimization/lib/openzeppelin-contracts"]
+	path = gas-optimization/trader-joe-optimization/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
