--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "gas-optimization/trader-joe-optimization/lib/openzeppelin-contracts"]
 	path = gas-optimization/trader-joe-optimization/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "gas-optimization/looks-rare-optimization/lib/forge-std"]
+	path = gas-optimization/looks-rare-optimization/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
