--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "gas-optimization/erc721-staking/lib/forge-std"]
 	path = gas-optimization/erc721-staking/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "gas-optimization/erc721-staking/lib/openzeppelin-contracts"]
+	path = gas-optimization/erc721-staking/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
