--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "gas-optimization/erc721-staking/lib/openzeppelin-contracts"]
 	path = gas-optimization/erc721-staking/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "ethernaut-16/lib/forge-std"]
+	path = ethernaut-16/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
