--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "ethernaut-16/lib/forge-std"]
 	path = proxies/ethernaut-16/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "proxies/ethernaut-24/lib/forge-std"]
+	path = proxies/ethernaut-24/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
