--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "proxies/ethernaut-24/lib/forge-std"]
 	path = proxies/ethernaut-24/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "proxies/ethernaut-25/lib/forge-std"]
+	path = proxies/ethernaut-25/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
