--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "proxies/ethernaut-25/lib/forge-std"]
 	path = proxies/ethernaut-25/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "week2-upgradeable/lib/forge-std"]
+	path = week2-upgradeable/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
