--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "week2-upgradeable/lib/forge-std"]
 	path = week2-upgradeable/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "week2-upgradeable/lib/openzeppelin-foundry-upgrades"]
+	path = week2-upgradeable/lib/openzeppelin-foundry-upgrades
+	url = https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades
