--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "week2-upgradeable/lib/openzeppelin-foundry-upgrades"]
 	path = week2-upgradeable/lib/openzeppelin-foundry-upgrades
 	url = https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades
+[submodule "week2-upgradeable/lib/openzeppelin-contracts-upgradeable"]
+	path = week2-upgradeable/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
